# wa_game

./: .gitignore  .gitmodules  README.md  TODO.txt  meson.build
client/: meson.build
client/include/: app.h  app_wayland.h  client_net.h  framebuffer.h  game.h  game_draw.h  game_net_events.h  game_ui.h  idxbuf.h  main_menu.h  map_editor.h  opengl.h  player.h  progress_bar.h  rect.h  renderer.h  shader.h  state.h  texture.h  util.h  vertarray.h  vertbuf.h  vertlayout.h
client/include/gui/: gui.h
client/lib/ght/: README.md  meson.build
client/lib/ght/example/: main.c  meson.build
client/lib/ght/ght/: meson.build
client/lib/ght/ght/include/: ght.h
client/lib/ght/ght/src/: ght.c
client/lib/glad/include/glad/: glad.h
client/lib/wa/: .gitignore  meson.build  x86_64-w64-mingw32.txt
client/lib/wa/tests/: simple.c  vert.glsl
client/lib/wa/wa/: meson.build
client/lib/wa/wa/include/: wa_cursor.h  wa_int.h  wa_log.h  wa_wayland.h  wa_wayland_egl.h
client/lib/wa/wa/src/: wa_wayland.c  wa_wayland_cursor.c  wa_wayland_egl.c  wa_win32_cursor.c
client/lib/wa/wa/wayland-protocols/: meson.build
client/src/: app.c  app_wayland.c  array.c  client_net.c  framebuffer.c  game.c  game_draw.c  game_net_events.c  game_ui.c  idxbuf.c  loading.c  main.c  main_menu.c  map_editor.c  opengl.c  player.c  progress_bar.c  rect.c  renderer.c  shader.c  state.c  texture.c  vertarray.c  vertbuf.c
client/src/gui/: gui.c
client/src/shaders/: default_frag.glsl  laser_frag.glsl  laser_vert.glsl  line_frag.glsl  line_vert.glsl  mm_frag.glsl  mm_vert.glsl  nk_frag.glsl  nk_vert.glsl  projectile_frag.glsl  projectile_vert.glsl  screen_frag.glsl  screen_vert.glsl
include/: app.h  file.h  loading.h  mat.h  rect.h  shader.h  vec.h  vertbuf.h  vertlayout.h
include/gui/: gui.h
lib/: meson.build
lib/coregame/: meson.build
lib/coregame/include/: array.h  cg_map.h  coregame.h  int.h  rect.h  sbsm.h  vec.h
lib/coregame/src/: cg_map.c  coregame.c  sbsm.c
lib/ght/: .gitignore  LICENSE
lib/glad/: meson.build
lib/glad/src/: glad.c
lib/netdef/: meson.build
lib/netdef/include/: netdef.h
lib/netdef/src/: netdef.c
lib/wa/: README.md
lib/wa/tests/: frag.glsl  meson.build  opengl.c
lib/wa/wa/include/: wa.h  wa_event.h  wa_keys.h  wa_wayland_xkbcommon.h  wa_win32.h  wa_win32_keymap.h
lib/wa/wa/src/: wa.c  wa_log.c  wa_wayland_input.c  wa_wayland_xkbcommon.c  wa_win32.c  wa_win32_keymap.c
res/: test.cgmap
res/maps/: 250x250.cgmap  test.cgmap
scripts/: copylibs.py  linux_pkg.sh  wa_game.bat  wa_game.sh  wa_game.vbs  win32_pkg.sh
server/: meson.build
server/include/: client.h  event.h  framestack.h  server.h  server_common.h  server_game.h
server/src/: client.c  event.c  framestack.c  main.c  server.c  server_game.c  server_init.c
src/: file.c  mat.c  renderer.c  shader.c  util.c  vertlayout.c
src/gui/: gui.c
src/shaders/: frag.glsl  vert.glsl
